--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
 <script>
 
 </script>
-
+<head>
+<link rel="icon" href="_clock_icon_135274.ico">
+</head>
 <body>
 	<h1 id="title">ДМБ</h1>
+
 	<h1 onclick=switchMode() > DATE </h1>
 	<h2 onclick=switchMode() > DATE </h2>
 	<div id="watch" onmouseenter = highlight()> HEY </div>
