--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </script>
 <head>
 
-<link rel="icon" href="clock_icon_135274.ico">
+<link rel=icon href="clock_icon_135274.ico">
 </head>
 <body>
 	<h1 id="title">ДМБ</h1>
