--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <link rel=icon href="clock_icon_135274.ico">
 </head>
 <body>
-	<h1 id="title">ДМБ</h1>
+	<h1 id="title">ДДД</h1>
 
 	<h1 onclick=switchMode() > DATE </h1>
 	<h2 onclick=switchMode() > DATE </h2>
